# docs/swagger.json
@@ -5633,7 +5633,13 @@
                     "type": "string"
                 },
                 "linking_policy": {
-                    "type": "string"
+                    "description": "Policy for linking SSO identities to existing accounts",
+                    "type": "string",
+                    "enum": [
+                        "never",
+                        "verified_email",
+                        "always"
+                    ]
                 },
                 "name": {
                     "type": "string"
